# Sparse-matrix-storage

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  matrix2.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
documentation/html_documentation/: _c_o_o_8hpp_source.html  _c_o_o_impl_8hpp_source.html  _c_o_omap_8hpp_source.html  _c_o_omap_impl_8hpp_source.html  _comparators_8hpp_source.html  _concepts_8hpp_source.html  _dimensions_8hpp_source.html  _matrix_8hpp_source.html  _matrix_impl_8hpp_source.html  _y_a_l_e_8hpp_source.html  _y_a_l_e_impl_8hpp_source.html  annotated.html  annotated_dup.js  classalgebra_1_1_c_o_o-members.html  classalgebra_1_1_c_o_o.html  classalgebra_1_1_c_o_o.js  classalgebra_1_1_c_o_omap-members.html  classalgebra_1_1_c_o_omap.html  classalgebra_1_1_c_o_omap.js  classalgebra_1_1_dimensions-members.html  classalgebra_1_1_dimensions.html  classalgebra_1_1_dimensions.js  classalgebra_1_1_matrix-members.html  classalgebra_1_1_matrix.html  classalgebra_1_1_matrix.js  classalgebra_1_1_y_a_l_e-members.html  classalgebra_1_1_y_a_l_e.html  classalgebra_1_1_y_a_l_e.js  classes.html  conceptalgebra_1_1_convertible_to_size_t.html  conceptalgebra_1_1_numeric_container.html  conceptalgebra_1_1_numeric_or_complex.html  conceptalgebra_1_1_sizet_container.html  conceptalgebra_1_1_sizet_pair.html  conceptalgebra_1_1_sizet_pair_container.html  conceptalgebra_1_1_valid_container.html  concepts.html  concepts.js  (+27 more)
include/: Dimensions.hpp  Matrix.hpp
src/: Dimensions.cpp  main.cpp
tests/: tests.cpp  tests.hpp
(+953 files in other folders)
